Fixing scrollbar styles

--- a/src/assets/styles/containers/Carousel/SmallCarousel.scss
+++ b/src/assets/styles/containers/Carousel/SmallCarousel.scss
@@ -1,7 +1,7 @@
 @import '../../lib/palette';
 
 .SmallCarousel {
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: nowrap;
   padding: 30px 0px;
   &.light {
@@ -37,24 +37,4 @@
 .SmallCarousel:hover .SmallCarousel-item:hover {
   transform: scale(1.5);
   opacity: 1;
-}
-
-@media screen and (min-width: 769px) {
-  .SmallCarousel {
-    overflow-x: hidden;
-    &:hover {
-      overflow-x: scroll;
-    }
-    &::-webkit-scrollbar {
-      height: 8px;
-      border-radius: 8px;
-      background: map-get(map-get($palette, greyColors), moon);
-    }
-    &::-webkit-scrollbar-thumb {
-      height: 8px;
-      border-radius: 8px;
-      background: map-get(map-get($palette, lightTheme), content);
-      cursor: pointer;
-    }
-  }
 }
