--- a/src/assets/styles/pages/cart.scss
+++ b/src/assets/styles/pages/cart.scss
@@ -56,17 +56,6 @@
 @media screen and (min-width: 570px) { 
   .cart {
     grid-area: 1 / 1 / 4 / 2;
-    &::-webkit-scrollbar {
-      width: 8px;
-      border-radius: 8px;
-      background: map-get(map-get($palette, greyColors), moon);
-    }
-    &::-webkit-scrollbar-thumb {
-      width: 8px;
-      border-radius: 8px;
-      background: map-get(map-get($palette, lightTheme), content);
-      cursor: pointer;
-    }
   }
 
   .total_amount {
