--- a/src/assets/styles/pages/product.scss
+++ b/src/assets/styles/pages/product.scss
@@ -92,16 +92,5 @@
       top: calc(10vh + 10px);
       bottom: 0;
     }
-    &::-webkit-scrollbar {
-      width: 8px;
-      border-radius: 8px;
-      background: map-get(map-get($palette, greyColors), moon);
-    }
-    &::-webkit-scrollbar-thumb {
-      width: 8px;
-      border-radius: 8px;
-      background: map-get(map-get($palette, lightTheme), content);
-      cursor: pointer;
-    }
   }
 }
